--- a/RestApi/.env
+++ b/RestApi/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.99.100
 DB_PORT=3306
 DB_DATABASE=lumenapidb
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 CACHE_DRIVER=array
 QUEUE_DRIVER=sync
@@ -20,3 +20,9 @@ QUEUE_DRIVER=sync
 //API_STANDARDS_TREE=vnd
 //API_VERSION=v1
 //API_SUBTYPE=api
+
+
+APP_PORT=8080 
+XDEBUG_HOST=192.168.99.100 
+DB_PORT=3306 
+MYSQL_HOST=192.168.99.100
