--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,24 @@ services:
     image: redis:alpine
     networks:
       - restapi_docker
+  restapi-myadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    ports:
+        - "8000:80"
+    environment:
+        - PMA_ARBITRARY=1
+        - PMA_HOST=${MYSQL_HOST}
+    restart: always
+    depends_on:
+        - restapi-mysql
   restapi-mysql:
     image: mysql:5.7
     ports:
       - "${DB_PORT}:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: restapi
+      MYSQL_DATABASE: lumenapidb
       MYSQL_USER: homestead
       MYSQL_PASSWORD: secret
     volumes:
