--- a/RestApi/.env
+++ b/RestApi/.env
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_DEBUG=true
+APP_DEBUG=false
 APP_KEY=base64:t53nLuz9S3lAZ6tkyWElyW41xI2QaCRSSjYOzK7ZzaA=
 APP_TIMEZONE=UTC
 //API_PREFIX=api
