--- a/RestApi/composer.json
+++ b/RestApi/composer.json
@@ -14,6 +14,7 @@
         "laravel/lumen-framework": "5.6.*",
         "laravelista/lumen-vendor-publish": "^2.1",
         "orumad/lumen-config-cache": "^1.0",
+        "ramsey/uuid": "^3.7",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
