--- a/Socket/composer.json
+++ b/Socket/composer.json
@@ -6,6 +6,7 @@
     },
     "require": {
         "cboden/ratchet": "0.3.*",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "ramsey/uuid": "^3.7"
     }
 }
