--- a/WebServer/my-project/package.json
+++ b/WebServer/my-project/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^2.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.0",
+    "vue-native-websocket": "^2.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "2.4.1"
